hitting service worker properly

--- a/views/media.pug
+++ b/views/media.pug
@@ -1321,11 +1321,14 @@ block extra_footer_js
       include mediaPlayerPartials/threateModeFunctionality
 
 
+  include mediaPlayerPartials/pushNotification
 
 
 
   //COMMENT FUNCTIONALITY CONTAINED HERE
   script(src="/js/media.js")
+
+  script(src="/js/notificationServiceWorker.js")
 
   script.
 
