--- a/views/layout.pug
+++ b/views/layout.pug
@@ -44,6 +44,11 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/enquire.js/2.0.1/enquire.min.js')
 
+    script(src='/js/otherNotif.js')
+
+    script(src="/js/notificationServiceWorker.js")
+
+
     link(rel='stylesheet', href='/css/loading-bar.css')
     script(src='/js/loading-bar.js')
 
