--- a/views/mediaPlayerPartials/thing.pug
+++ b/views/mediaPlayerPartials/thing.pug
@@ -15,8 +15,9 @@ script.
   var swRegistration;
 
 
-  const registerServiceWorker = async function(){
-    swRegistration = await navigator.serviceWorker.register('/js/notificationServiceWorker.js')
+  const registerServiceWorker = async function () {
+    swRegistration = await
+    navigator.serviceWorker.register('/js/notificationServiceWorker.js')
     console.log(swRegistration);
 
     return swRegistration
@@ -29,8 +30,9 @@ script.
 
 
   var permission;
-  const requestNotificationPermission =  async function() {
-    permission = await window.Notification.requestPermission();
+  const requestNotificationPermission = async function () {
+    permission = await
+    window.Notification.requestPermission();
 
     console.log(permission);
 
@@ -44,7 +46,8 @@ script.
 
   const main = async() => {
     check();
-    swRegistration = await registerServiceWorker();
+    swRegistration = await
+    registerServiceWorker();
     console.log('swRegistration');
     console.log(swRegistration);
 
@@ -61,7 +64,8 @@ script.
 
     console.log(subscription);
 
-    const response = await fetch(SERVER_URL, {
+    const response = await
+    fetch(SERVER_URL, {
       method: "post",
       headers: {
         "Content-Type": "application/json"
@@ -73,31 +77,21 @@ script.
   };
 
   // this is basically the post request after you click a button
-  const unregister = async function(){
+  const unregister = async function () {
 
-    var registrations = await navigator.serviceWorker.getRegistrations();
+    var registrations = await
+    navigator.serviceWorker.getRegistrations();
     for (var registration of registrations) {
       console.log(registration);
-      const thing = await registration.unregister()
+      const thing = await
+      registration.unregister()
       console.log(thing);
     }
   };
 
   // this is basically the post request after you click a button
-  const refreshPage = function( ){
+  const refreshPage = function () {
     location.reload();
   };
-
-  const main = async function () {
-    check();
-    swRegistration = await registerServiceWorker();
-    console.log('swRegistration');
-    console.log(swRegistration);
-
-    permission = await requestNotificationPermission();
-    console.log('permission');
-    console.log(permission);
-  };
-
 
 
