coming along well

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -230,6 +230,12 @@ block content
 
     include ../mediaPlayerPartials/thing
 
+    script.
+
+        $('.pushNotificationIcon').click(function(){
+            main();
+        })
+
 
 
 
