--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -138,6 +138,9 @@ block content
 
     h2.pushNotificationIcon Notification Icon
 
+    // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
+    h2.pushNotificationIcon Push Sub To This User
+
 
 
     div.center-block.text-center
@@ -220,15 +223,60 @@ block content
     include ../viewPartials/channelSubscribe
 
 
+
+
     script.
       var myTextEl = document.getElementById('descriptionText');
       myTextEl.innerHTML = Autolinker.link(myTextEl.innerHTML);
 
-    script(src='/js/otherNotif.js')
+    //script(src='/js/otherNotif.js')
 
     script(src="/js/notificationServiceWorker.js")
 
     include ../mediaPlayerPartials/thing
+
+    script.
+      $('.pushNotificationIcon').click(function () {
+        alert('h23lj23');
+      })
+
+        $('.pushNotificationIcon').click(function () {
+        console.log('hello');
+          var csrf = '#{_csrf}'
+
+          const data = {
+          _csrf: csrf,
+          user : '#{user.channelUrl}',
+          channel : '#{channel.channelUrl}'
+        }
+
+          $.ajax({
+            type: 'POST',
+            url: `/api/subscribeToPushNotifications`,
+            data,
+            success: function (data) {
+              //- console.log(data);
+
+              // Shows undefined when at 100%
+              $('#processing').text(`${data.uploadProgress !== undefined ? data.uploadProgress : 'Completed'}`);
+
+              if (parseInt(data) == 100) {
+                location.reload();
+              }
+
+            },
+            error: function (err) {
+              console.log(err);
+            }
+          });
+
+        // main();
+
+
+
+
+
+      })
 
     script.
 
