--- a/views/media.pug
+++ b/views/media.pug
@@ -495,11 +495,11 @@ block content
                     else
                         button.subscribe.btn.fw.btn-success.op80.subscribeButton(style="border-radius:4px;") Subscribe (#{subscriberAmount})
 
-                br
-                //- push notification functionality
-                div.change-size-button
-                    h2
-                        img.pushNotificationIcon(src="/images/push-notif-dark.jpg" aria-hidden="true" style="cursor:pointer;color:#a5a5a5;width:43px;")
+                //br
+                ////- push notification functionality
+                //div.change-size-button
+                //    h2
+                //        img.pushNotificationIcon(src="/images/push-notif-dark.jpg" aria-hidden="true" style="cursor:pointer;color:#a5a5a5;width:43px;")
 
 
                 br
