--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -137,10 +137,11 @@ block content
     hr
 
     if user && user.role == 'admin'
-        h2.pushNotificationIcon Notification Icon
-
         // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
         h2.pushNotificationIcon Push Sub To This User
+
+        // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
+        h2.unsubscribePushButton Unsubscribe To This User
 
         if user && user.role == 'admin'
             h3.sendPushNotifs Send Push Notifs For This User (Simulating Upload)
@@ -267,7 +268,36 @@ block content
                   console.log(err);
                 }
               });
-         })
+            })
+
+
+        script.
+          $('.unsubscribePushButton').click(function () {
+            console.log('hello');
+            var csrf = '#{_csrf}'
+
+            const data = {
+              _csrf: csrf,
+              user: '#{user.channelUrl}',
+              channel: '#{channel.channelUrl}'
+            }
+
+            $.ajax({
+              type: 'POST',
+              url: `/api/subscribeToPushNotifications`,
+              data,
+              success: function (data) {
+                //- console.log(data);
+
+                // Shows undefined when at 100%
+
+
+              },
+              error: function (err) {
+                console.log(err);
+              }
+            });
+            })
 
     if user && user.role == 'admin'
         script.
