--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -255,6 +255,7 @@ block content
                 url: `/api/subscribeToPushNotifications`,
                 data,
                 success: function (data) {
+                  console.log(data);
                   //- console.log(data);
 
                   // Shows undefined when at 100%
