show if you already have push notifs on

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -255,6 +255,13 @@ block content
                 url: `/api/subscribeToPushNotifications`,
                 data,
                 success: function (data) {
+                  if(data == 'already existing inactive, make it active'){
+
+                  } else if (data == 'thing1'){
+
+                  } else if (data == 'thing2'){
+
+                  }
                   console.log(data);
                   //- console.log(data);
 
