--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -248,7 +248,7 @@ block content
               console.log(alreadyHavePushNotifsOn);
 
               if (alreadyHavePushNotifsOn) {
-                $('.pushNotificationIcon i').css('color', 'grey')
+                $('.pushNotificationIcon i').css('color', 'white')
               }
 
               if (!('serviceWorker' in navigator) || !('PushManager' in window)) {
@@ -273,13 +273,13 @@ block content
                   success: function (data) {
 
                     // by default, turn the color grey and load up 'you have subbed' as the text
-                    $('.pushNotificationIcon i').css('color', 'grey')
+                    $('.pushNotificationIcon i').css('color', 'white')
                     let swalText = 'You have subscribed to their push notifications'
 
                     // if push notifs already on
                     if (alreadyHavePushNotifsOn) {
                       swalText = 'You have unsubscribed from their push notifications'
-                      $('.pushNotificationIcon i').css('color', 'white')
+                      $('.pushNotificationIcon i').css('color', 'lightgrey')
                     }
 
                     swal(swalText);
