--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -139,7 +139,7 @@ block content
     // TODO: export a variable plus_enabled if user enables payments
     // TODO: has to have styled updated with fw
     if process.env.PLUS_ENABLED == 'true'
-      h2.fw.text-center(style="margin-bottom:16px") #{brandName} Plus+
+      h2.fw.text-center(style="margin-bottom:16px") Upgrade To #{brandName} Plus+
 
       div.nt-plus.center-div.text-center
         if user.plan == 'plus'
@@ -159,7 +159,7 @@ block content
             //- NewTube Recording Studio (Coming Soon)
 
 
-          p.fw(style="white-space:pre-line;margin-bottom:19px;font-size:17px;margin-top:23px;").
+          p.fw(style="white-space:pre-line;margin-bottom:19px;font-size:19px;margin-top:23px;").
             - Upload size limit raised from 500MB to 2GB
 
             - Unlisted and private uploads (on top of public uploads)
