about to clean up commit

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -147,7 +147,8 @@ block content
           p Your support makes NewTube possible
           p Please enjoy your new features:
           //h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
-          h4 Livestreaming, unlisted uploads, private uploads, 2GB upload size
+          // h4 Livestreaming, unlisted uploads, private uploads, 2GB upload size
+          h4 Unlisted uploads, private uploads, 2GB upload size
 
 
         else
