--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -139,7 +139,7 @@ block content
     // TODO: export a variable plus_enabled if user enables payments
     // TODO: has to have styled updated with fw
     if process.env.PLUS_ENABLED == 'true'
-      h2.fw.text-center(style="margin-bottom:16px") Upgrade To #{brandName} Plus+
+      h2.fw.text-center(style="margin-bottom:16px") Upgrade To #{brandName} Plus
 
       div.nt-plus.center-div.text-center
         if user.plan == 'plus'
@@ -163,7 +163,9 @@ block content
           p.fw(style="white-space:pre-line;margin-bottom:19px;font-size:19px;margin-top:23px;").
             - Upload size limit raised from 500MB to 2GB
 
-            - Unlisted and private uploads (on top of public uploads)
+            - Unlisted and private uploads
+
+            - Livestreaming with live chat
 
             - $4.95/month, cancel at any time
 
@@ -178,7 +180,7 @@ block content
 
           button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
             span(style="display: block; min-height: 30px;") Buy Now
-            img(src="/images/stripe-white.png" style="max-width:200px")
+            // img(src="/images/stripe-white.png" style="max-width:200px")
 
           //br
           //br
