--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -84,12 +84,16 @@ block content
                     button(style="display:inherit;margin:0 auto;border-radius:3px;").fw.subscribe.btn.btn-success Subscribe (#{subscriberAmount})
 
                 if user
+                    div(style="margin-top:12px")
+                        // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
+                        h2.share-button.pushNotificationIcon(style="display:inline")
+                            i.share-icon.fas.fa-bell(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:0px;color:white;")
+                        h2.share-button.emailNotificationIcon(style="display:inline")
+                            i.share-icon.fas.fa-envelope(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:10px;color:white;")
 
-                    // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
-                    h2.share-button.pushNotificationIcon
-                        i.share-icon.fas.fa-bell(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:0px;color:white;")
-                    h2.share-button.emailNotificationIcon
-                        i.share-icon.fas.fa-envelope(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:10px;color:white;")
+                // todo: else
+                // let's put an 'else' here and here and show those same buttons
+                // but when you click them, it prompts you to either login, or to add your email
 
 
 
