bugfix notif thing

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -249,6 +249,7 @@ block content
 
             $(document).ready(function(){
               var alreadyHaveEmailNotifsOn = '#{alreadyHaveEmailNotifsOn}' == 'true'
+              console.log('already have email notis on')
 
               if (alreadyHaveEmailNotifsOn) {
                 $('.emailNotificationIcon i').css('color', 'white')
